# cmake-skeleton

./: CMakeLists.txt  LICENSE.txt  README.md  clang-format.sh
cli/: CMakeLists.txt
cli/skeleton-main/: CMakeLists.txt  skeleton-main.cpp
lib/: CMakeLists.txt
skeleton/: CMakeLists.txt
skeleton/base/: CMakeLists.txt  functions.cpp  functions.h
test/: CMakeLists.txt
test/base/: CMakeLists.txt  test_functions.cpp
